--- a/public/test.html
+++ b/public/test.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+  <script src="/socket.io/socket.io.js"></script>
+  <title></title>
+  <script>
+  var socket = io.connect('http://localhost:3000');
+  socket.on('news', function (data) {
+    console.log(data);
+    socket.emit('other_event', { my: 'data' });
+  });
+</script>
 </head>
 <body>
 <h1>Hello, test</h1>
 </body>
 </html>
+
+
+
+
